--- a/backend/user-service/pom.xml
+++ b/backend/user-service/pom.xml
@@ -6,15 +6,15 @@
     
     <!-- 父项目信息 -->
     <parent>
-        <groupId>com.paper.review</groupId>
+        <groupId>com.review</groupId>
         <artifactId>paper-review-system</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <!-- 项目信息 -->
     <artifactId>user-service</artifactId>
     <name>user-service</name>
-    <description>用户服务：负责用户管理、认证授权、角色权限等功能</description>
+    <description>User Management Service</description>
 
     <!-- 项目依赖 -->
     <dependencies>
