--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,14 +9,59 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18' 
+    - uses: actions/checkout@v3
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v3
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+        cache: 'npm'
+
+    - name: Build Backend
+      run: |
+        cd backend
+        mvn clean package -DskipTests
+
+    - name: Build Frontend
+      run: |
+        cd frontend
+        npm ci
+        npm run build
+
+    - name: Run Backend Tests
+      run: |
+        cd backend
+        mvn test
+
+    - name: Run Frontend Tests
+      run: |
+        cd frontend
+        npm run test:unit
+
+    - name: Build and Push Docker Images
+      if: github.ref == 'refs/heads/main'
+      run: |
+        docker-compose build
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker-compose push
+
+    - name: Deploy to Development
+      if: github.ref == 'refs/heads/develop'
+      run: |
+        # Add deployment scripts here
+        echo "Deploying to development environment"
+
+    - name: Deploy to Production
+      if: github.ref == 'refs/heads/main'
+      run: |
+        # Add deployment scripts here
+        echo "Deploying to production environment" 
