--- a/backend/common/pom.xml
+++ b/backend/common/pom.xml
@@ -6,9 +6,9 @@
     
     <!-- 父项目信息 -->
     <parent>
-        <groupId>com.review</groupId>
+        <groupId>com.paper.review</groupId>
         <artifactId>paper-review-system</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <!-- 项目信息 -->
