--- a/config/prometheus/prometheus.yml
+++ b/config/prometheus/prometheus.yml
@@ -13,24 +13,20 @@ rule_files:
   # - "second_rules.yml"
 
 scrape_configs:
-  - job_name: "prometheus"
+  - job_name: 'prometheus'
     static_configs:
-      - targets: ["localhost:9090"]
+      - targets: ['localhost:9090']
 
-  - job_name: "spring-boot"
-    metrics_path: "/actuator/prometheus"
+  - job_name: 'spring-actuator'
+    metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: 
-        - "user-service:8081"
-        - "paper-service:8082"
-        - "review-service:8083"
-        - "gateway:8080"
+      - targets: ['gateway:8080', 'user-service:8081', 'paper-service:8082', 'review-service:8083']
 
-  - job_name: "node-exporter"
+  - job_name: 'node-exporter'
     static_configs:
-      - targets: ["node-exporter:9100"]
+      - targets: ['node-exporter:9100']
 
-  - job_name: "cadvisor"
+  - job_name: 'cadvisor'
     static_configs:
-      - targets: ["cadvisor:8080"] 
+      - targets: ['cadvisor:8080'] 
