--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "format": "prettier --write src/",
     "test:unit": "vitest",
-    "test:e2e": "cypress open"
+    "test:unit:ui": "vitest --ui",
+    "test:unit:coverage": "vitest --coverage",
+    "test:e2e": "cypress open",
+    "test:e2e:headless": "cypress run",
+    "test:e2e:ci": "start-server-and-test dev http://localhost:5173 test:e2e:headless",
+    "test:all": "npm run test:unit && npm run test:e2e:headless",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "axios": "^1.6.0",
@@ -30,11 +36,14 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.4.0",
+    "@vitest/ui": "^0.34.0",
     "cypress": "^13.5.0",
     "eslint": "^8.53.0",
     "eslint-plugin-vue": "^9.18.0",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
     "sass": "^1.69.0",
+    "start-server-and-test": "^2.0.0",
     "typescript": "^5.2.0",
     "vite": "^5.0.0",
     "vitest": "^0.34.0",
