commit total file
# Conflicts:
#	frontend/src/utils/request.ts

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,7 +7,7 @@
     <!-- 项目基本信息 -->
     <groupId>com.paper.review</groupId>
     <artifactId>paper-review-system</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>paper-review-system</name>
     <description>论文评审系统 - 基于Spring Cloud的分布式微服务架构</description>
@@ -15,10 +15,10 @@
     <!-- 子模块 -->
     <modules>
         <module>common</module>          <!-- 公共模块：工具类、通用配置等 -->
-        <module>gateway</module>         <!-- 网关服务：请求路由、负载均衡等 -->
         <module>user-service</module>    <!-- 用户服务：用户管理、认证授权等 -->
         <module>paper-service</module>   <!-- 论文服务：论文管理、存储等 -->
         <module>review-service</module>  <!-- 评审服务：评审流程、评分等 -->
+        <module>gateway</module>         <!-- 网关服务：请求路由、负载均衡等 -->
     </modules>
 
     <!-- 属性配置 -->
@@ -58,7 +58,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot.version}</version>
+                <version>3.2.5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -93,13 +93,6 @@
                 <version>${druid.version}</version>
             </dependency>
 
-            <!-- JWT：用于生成和验证JSON Web Token -->
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jwt.version}</version>
-            </dependency>
-
             <!-- Hutool：小而全的Java工具类库 -->
             <dependency>
                 <groupId>cn.hutool</groupId>
@@ -126,6 +119,25 @@
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
                 <version>${mapstruct.version}</version>
+            </dependency>
+
+            <!-- jjwt 统一依赖管理 -->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jwt.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jwt.version}</version>
+                <scope>runtime</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -200,16 +212,4 @@
             </plugins>
         </pluginManagement>
     </build>
-
-    <!-- 仓库配置 -->
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 </project> 
