--- a/config/logstash/pipeline/logstash.conf
+++ b/config/logstash/pipeline/logstash.conf
@@ -1,18 +1,14 @@
 input {
-  beats {
-    port => 5044
+  file {
+    path => "/var/log/paper-review/*.log"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
   }
 }
 
 filter {
-  if [type] == "java-log" {
-    grok {
-      match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:level} %{GREEDYDATA:logger} - %{GREEDYDATA:message}" }
-    }
-    date {
-      match => [ "timestamp", "ISO8601" ]
-      target => "@timestamp"
-    }
+  grok {
+    match => { "message" => "%{TIMESTAMP_ISO8601:timestamp} %{LOGLEVEL:level} %{GREEDYDATA:msg}" }
   }
 }
 
@@ -21,4 +17,5 @@ output {
     hosts => ["elasticsearch:9200"]
     index => "paper-review-logs-%{+YYYY.MM.dd}"
   }
+  stdout { codec => rubydebug }
 } 
