--- a/backend/gateway/pom.xml
+++ b/backend/gateway/pom.xml
@@ -3,10 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>paper-review-system</artifactId>
         <groupId>com.paper.review</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <artifactId>paper-review-system</artifactId>
+        <version>1.0.0</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
+    <properties>
+        <java.version>21</java.version>
+    </properties>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>gateway</artifactId>
@@ -40,11 +44,17 @@
             <version>${spring-cloud-alibaba.version}</version>
         </dependency>
 
-        <!-- 公共模块 -->
         <dependency>
             <groupId>com.paper.review</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -53,6 +63,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.paper.review.gateway.GatewayApplication</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
