--- a/backend/paper-service/src/main/resources/application.yml
+++ b/backend/paper-service/src/main/resources/application.yml
@@ -1,17 +1,24 @@
 server:
-  port: 8081
+  port: 8082
 
 spring:
   application:
     name: paper-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/paper_review
-    username: ${DB_USERNAME:postgres}
-    password: ${DB_PASSWORD:postgres}
+    url: jdbc:mysql://localhost:3306/paper_review?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
